this header should be always present

--- a/mtg/mtg_api/nginx/nginx.conf
+++ b/mtg/mtg_api/nginx/nginx.conf
@@ -27,7 +27,7 @@ http {
 		listen 8080;
 		server_name localhost;
 
-		add_header Access-Control-Allow-Origin "*";
+		add_header Access-Control-Allow-Origin "*" always;
 		location /info {
 			mtg_api_info;
 		}
