--- a/mtg/mtg_api/CMakeLists.txt
+++ b/mtg/mtg_api/CMakeLists.txt
@@ -47,6 +47,10 @@ endif()
 
 set_compile_options(${project})
 
+add_executable(mtg_api_util mtg_api_util.cpp)
+set_compile_options(mtg_api_util)
+target_link_libraries(mtg_api_util mtg_api)
+
 option(BUILD_NGINX_MODULE "build nginx module" OFF)
 if (BUILD_NGINX_MODULE)
 	add_subdirectory(nginx)
