--- a/mtg/mtg_api/nginx/nginx.conf
+++ b/mtg/mtg_api/nginx/nginx.conf
@@ -20,7 +20,7 @@ http {
 
 	mtg_api_path_cards "./AllCards.json";
 	mtg_api_path_name_to_tags "./name_to_tags.json";
-	mtg_api_path_sets "./AllSets.json";
+	mtg_api_path_sets "./AllPrintings.json";
 	mtg_api_path_tags "./tags.json";
 
 	server {
