--- a/mtg/articles/commander_season_of_growth.json
+++ b/mtg/articles/commander_season_of_growth.json
@@ -70,9 +70,7 @@
 "Staunch-Hearted Warrior",
 "Centaur Battlemaster",
 "Gargos, Vicious Watcher",
-"Phantom Wurm",
 
-"Evolution Sage",
 "Hermit of the Natterknolls",
 "Oakhame Adversary",
 "Sage of Ancient Lore",
@@ -90,12 +88,13 @@
 "Phantom Nantuko",
 "Great Sable Stag",
 "Horned Troll",
+"Predator Ooze",
 "Hunter's Prowess",
 "Lumberknot",
+"Phantom Centaur",
 "Noble Quarry",
 "Boon Satyr",
 "Nyxborn Wolf",
-"Slith Predator",
 "Emperor's Vanguard",
 "Gnarlback Rhino",
 "Declare Dominance",
@@ -118,7 +117,7 @@
 "Mythic Proportions",
 "Mitotic Slime",
 "Feral Throwback",
-
+"Feasting Troll King",
 "Kogla, the Titan Ape",
 "Kalonian Twingrove",
 "Duskwatch Recruiter",
@@ -142,16 +141,17 @@
 "Karoo Meerkat",
 "Skylasher",
 "Witchstalker",
-"Predator Ooze",
 "Silvos, Rogue Elemental",
 "Ulvenwald Tracker",
 "Avenging Druid",
 "Ohran Viper",
 
+"Monstrous Step",
+"Ram Through",
+"Sudden Spinnerets",
 "Bloated Toad",
 "Darkwatch Elves",
 "Temur Sabertooth",
-"Phantom Centaur",
 "Silhana Ledgewalker",
 
 "Jade Guardian",
