deck fixes; split cards

--- a/mtg/articles/commander_season_of_growth.json
+++ b/mtg/articles/commander_season_of_growth.json
@@ -31,11 +31,11 @@
 
 "Prey's Vengeance",
 "Giant Growth",
-"Garenbrig Carver",
+"Garenbrig Carver // Shield's Might",
 "Aim High",
 "Steady Aim",
 "Pack's Favor",
-"Tuinvale Treefolk",
+"Tuinvale Treefolk // Oaken Boon",
 
 "Warriors' Lesson",
 "Wildsize",
@@ -71,9 +71,9 @@
 "Centaur Battlemaster",
 "Gargos, Vicious Watcher",
 
-"Hermit of the Natterknolls",
+"Hermit of the Natterknolls // Lone Wolf of the Natterknolls",
 "Oakhame Adversary",
-"Sage of Ancient Lore",
+"Sage of Ancient Lore // Werewolf of Ancient Hunger",
 "Cloudthresher",
 "Verdant Force",
 "Tornado Elemental",
@@ -111,7 +111,7 @@
 "Blanchwood Armor",
 "Lure",
 "Roar of Challenge",
-"Budoka Gardener",
+"Budoka Gardener // Dokai, Weaver of Life",
 "Centaur Rootcaster",
 "Prodigious Growth",
 "Mythic Proportions",
@@ -120,7 +120,7 @@
 "Feasting Troll King",
 "Kogla, the Titan Ape",
 "Kalonian Twingrove",
-"Duskwatch Recruiter",
+"Duskwatch Recruiter // Krallenhorde Howler",
 "Jedit Ojanen of Efrava",
 "Guardian Project",
 "Grim Flowering",
@@ -171,11 +171,11 @@
 "Wild Defiance",
 
 "Blossoming Defense",
-"Primal Below",
+"Primal Bellow",
 "Mending Touch",
 "Nature's Way",
 "Sheltering Word",
-"Terifying Presence",
+"Terrifying Presence",
 "Ambuscade",
 "Savage Stomp",
 "Time to Feed",
