mtg json v5; version bumps; minor fixes

--- a/mtg/mtg_api/CMakeLists.txt
+++ b/mtg/mtg_api/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 3.10)
 set(project mtg_api)
 project(${project})
 
+set(CMAKE_CXX_STANDARD 17)
+
 set(sources
 	database.cpp
 	json.cpp
@@ -32,18 +34,27 @@ endfunction()
 
 option(BUILD_TESTS "build tests" ON)
 if (BUILD_TESTS)
-	add_subdirectory(/usr/src/gtest ${CMAKE_BINARY_DIR}/build_gtest)
+	include(FetchContent)
+	FetchContent_Declare(
+		googletest
+		GIT_REPOSITORY https://github.com/google/googletest.git
+		GIT_TAG        v1.13.0
+	)
+	set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+	FetchContent_MakeAvailable(googletest)
 	include(GoogleTest)
+
 	add_executable(mtg_api_test mtg_api_test.cpp)
 	set_compile_options(${project}_test)
 
 	target_link_libraries(${project}_test ${project})
-	target_link_libraries(${project}_test gtest gtest_main)
+	target_link_libraries(${project}_test GTest::gtest_main)
 	gtest_add_tests(
 		TARGET ${project}_test
 		TEST_LIST mtg_api_test
 	)
 endif()
+
 
 set_compile_options(${project})
 
@@ -51,7 +62,7 @@ add_executable(mtg_api_util mtg_api_util.cpp)
 set_compile_options(mtg_api_util)
 target_link_libraries(mtg_api_util mtg_api)
 
-option(BUILD_NGINX_MODULE "build nginx module" OFF)
+option(BUILD_NGINX_MODULE "build nginx module" ON)
 if (BUILD_NGINX_MODULE)
 	add_subdirectory(nginx)
 else()
