--- a/mtg/mtg_api/nginx/nginx.conf
+++ b/mtg/mtg_api/nginx/nginx.conf
@@ -18,12 +18,13 @@ http {
 
 	keepalive_timeout 65;
 
-	mtg_api_path_cards "./AllCards.json";
+	mtg_api_path_cards "./AtomicCards.json";
 	mtg_api_path_name_to_tags "./name_to_tags.json";
 	mtg_api_path_sets "./AllPrintings.json";
 	mtg_api_path_tags "./tags.json";
 
 	server {
+		error_log logs/error.log warn;
 		listen 8080;
 		server_name localhost;
 
